# MacroLens

./: .gitignore  Dockerfile  Dockerfile.api  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
analytics/: correlations.py  lag_analysis.py  regression.py
api/api/api/: settings.py  urls.py
api/api/core/: models.py  urls.py  views.py
config/: settings.py
dags/: analytics_dag.py  ingest_alpha_vantage.py  ingest_fred.py  ingest_treasury.py  ingest_yfinance.py  transform.py
dashboard/static/css/: dashboard.css
dashboard/static/js/: api.js  chartUtils.js
dashboard/templates/dashboard/: anomalies.html  base.html  correlations.html  factors.html  home.html  lags.html  (+2 more)
docs/: analytics.md  api.md  frontend.md  infrastructure.md  ingestion.md  transformation.md
ingestion/: dag_factory.py
ingestion/adapters/: alphaVantage.py  base.py  fred.py  treasury.py  yfinance.py
ingestion/config/: series_config.py
ingestion/loaders/: aws_s3_client.py  aws_s3_gate.py  base.py  db_connection.py  postgres_gate.py
ingestion/validators/: series_validator.py
scripts/: init_db.py  test_adapter.py  test_loader.py
tests/test_adapters/: test_alphavantage_adapter.py  test_fred_adapter.py  test_treasury_adapter.py  test_yfinance_adapter.py
tests/test_dags/: conftest.py  test_dags.py
tests/test_loaders/: test_postgres_loader.py  test_s3_loader.py
tests/test_transformation/: test_derived_and_snapshots.py  test_normalizer.py
tests/test_validators/: test_series_validator.py
transformation/: derived_series.py  normalizer.py  snapshot_builder.py
(+8 files in other folders)
